--- a/03.Video/ecommerce-app/src/app/pages/profile/profile.component.html
+++ b/03.Video/ecommerce-app/src/app/pages/profile/profile.component.html
@@ -1,31 +1,22 @@
 <div class="profile-container">
-  <!-- Mostrar error si existe -->
-  @if (error) {
-  <div class="error-message">
-    <p>{{ error }}</p>
-  </div>
-  }
-
   <!-- Mostrar perfil si existe -->
-  @if (profile && !error) {
+  @if (user$ | async; as user) {
   <div class="profile-content">
     <div class="profile-header">
-      <img [src]="profile.avatar" [alt]="profile.displayName" class="avatar">
-      <h2>Bienvenido, {{ profile.displayName }}</h2>
+      <img [src]="user.avatar" [alt]="user.displayName" class="avatar">
+      <h2>Bienvenido, {{ user.displayName }}</h2>
     </div>
     <div class="profile-info">
-      <p><strong>Email:</strong> {{ profile.email }}</p>
-      <p><strong>Rol:</strong> {{ profile.role }}</p>
-      <p><strong>Estado:</strong> {{ profile.isActive ? 'Activo' : 'Inactivo' }}</p>
-      <p><strong>ID:</strong> {{ profile._id }}</p>
+      <p><strong>Email:</strong> {{ user.email }}</p>
+      <p><strong>Rol:</strong> {{ user.role }}</p>
+      <p><strong>Estado:</strong> {{ user.isActive ? 'Activo' : 'Inactivo' }}</p>
+      <p><strong>ID:</strong> {{ user._id }}</p>
     </div>
+  </div>
+  }@else{
+  <div class="loading-state">
+    <p>Cargando perfil del usuario...</p>
   </div>
   }
 
-  <!-- Loading state -->
-  @if (!profile && !error) {
-  <div class="loading">
-    <p>Cargando perfil...</p>
-  </div>
-  }
 </div>
