--- a/02.Project/ecommerce-app/src/app/pages/home/home.component.html
+++ b/02.Project/ecommerce-app/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="relative w-full max-w-6xl mx-auto">
+  <!-- {{title}} -->
   <app-carousel
     [autoPlay]="autoPlay"
     [interval]="3000"
