--- a/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/products-card/products-card.component.html
@@ -56,6 +56,7 @@
         Ver más
       </a>
       <button
+
         [disabled]="product.stock === 0"
         [class]="
           product.stock === 0
@@ -63,6 +64,7 @@
             : 'bg-green-600 hover:bg-green-700 text-white'
         "
         class="px-4 py-2 rounded-md transition-colors"
+        (click)="addToCart()"
       >
         🛒
       </button>
