--- a/02.Project/ecommerce-app/src/app/components/auth/register-form/register-form.component.html
+++ b/02.Project/ecommerce-app/src/app/components/auth/register-form/register-form.component.html
@@ -104,6 +104,7 @@
         <p class="text-sm text-gray-500">
           ¿Ya tienes cuenta?
           <a
+            [routerLink]="['/login']"
             class="font-medium text-blue-600 hover:text-blue-700 transition-colors"
           >
             Inicia sesión
