--- a/02.Project/ecommerce-app/src/app/components/shared/form-field/form-field.component.html
+++ b/02.Project/ecommerce-app/src/app/components/shared/form-field/form-field.component.html
@@ -12,7 +12,7 @@
         [disabled]="disabled"
         (input)="onInputChange($event)"
         (blur)="onBlur()"
-        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors"
+        class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-colors placeholder-gray-500 placeholder-opacity-50"
     />
     <app-error-message [message]="errorMessage"></app-error-message>
 </div>
