--- a/02.Project/ecommerce-app/src/app/pages/cart/cart.component.html
+++ b/02.Project/ecommerce-app/src/app/pages/cart/cart.component.html
@@ -16,9 +16,10 @@
             >
               <div class="flex flex-col sm:flex-row">
                 <div class="relative w-full sm:w-48 h-48 bg-gray-100 flex-shrink-0">
-                  @if (item.product.imageUrl) {
+                  @if (item.product.imagesUrl) {
+                    {{item.product.imagesUrl}}
                     <img
-                      [src]="item.product.imageUrl"
+                      [src]="item.product.imagesUrl[0]"
                       [alt]="item.product.name"
                       class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-300"
                     />
