--- a/02.Project/ecommerce-app/src/app/components/auth/login-form/login-form.component.html
+++ b/02.Project/ecommerce-app/src/app/components/auth/login-form/login-form.component.html
@@ -11,7 +11,7 @@
 
       <div class="space-y-5">
         <app-form-field
-          label="correo elecrónicc"
+          label="correo elecrónico"
           fieldId="email"
           type="email"
           placeholder="email@example"
