--- a/02.Project/ecommerce-app/src/app/components/products/search-products/search-products.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/search-products/search-products.component.html
@@ -1,16 +1,13 @@
 <div class="relative">
-  <div class="bg-white shadow-lg border-b sticky top-0 z-50 p-4">
+  <div class="shadow-lg border-b sticky top-0 z-50 p-4 bg-gray-900 backdrop-blur-md ">
     <div class="max-w-6xl mx-auto">
-      <form [formGroup]="searchProductForm" class="flex gap-2 items-center">  
-        @if(router.url==='/'){
-          <button [routerLink]="['/products']" class="flex bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-5 rounded-md">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
-            </svg>
-            <span class="ml-3">Products</span>
-          </button>
-        }@else if(router.url==='/products'){
-          <button [routerLink]="['/']" class="flex bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-5 rounded-md">
+      <form [formGroup]="searchProductForm" class="flex gap-2 items-center">
+        <div class="flex gap-2 items-center h-10 w-auto relative -left-26">
+          <img src="images-2/upc.png" alt="TechNova" class="h-10 w-auto">
+          <p class="text-3xl text-white">Tech<span class="text-3xl font-semibold text-blue-500">Nova</span></p>
+        </div>
+        @if(router.url==='/products'){
+          <button [routerLink]="['/']" class="flex bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-5 rounded-md -ml-10">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
             </svg>
@@ -18,30 +15,32 @@
           </button>
         }
 
-        <div class="flex-1 relative">
+        <div class="flex-1 relative ml-9">
           <input
             type="text"
             formControlName="q"
             placeholder="Buscar productos..."
-            class="w-full px-4 py-3 border-2 border-gray-300 rounded-lg focus:ring-2 focus:ring-orange-500 text-lg"
+            class="w-full px-4 py-3 border-2 placeholder-gray-400 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 text-lg text-white"
           />
         </div>
+        <!--
         <div class="flex gap-2 items-center">
           <span class="text-sm text-gray-600 hidden md:block">Precio</span>
           <input
             type="number"
             formControlName="minPrice"
             placeholder="Min"
-            class="w-20 px-2 py-3 border border-gray-300 focus:ring-2 focus:ring-orange-500 text-sm"
+            class="w-20 px-2 py-3 border border-gray-300 focus:ring-2 focus:ring-blue-500 text-sm"
           />
           <span class="text-gray-400">-</span>
           <input
             type="number"
             formControlName="maxPrice"
             placeholder="Max"
-            class="w-20 px-2 py-3 border border-gray-300 focus:ring-2 focus:ring-orange-500 text-sm"
+            class="w-20 px-2 py-3 border border-gray-300 focus:ring-2 focus:ring-blue-500 text-sm"
           />
         </div>
+        -->
       </form>
     </div>
   </div>
