--- a/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
+++ b/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
@@ -55,19 +55,31 @@
       </button>
     </div>
     <div class="flex-1 p-4 overflow-y-auto">
-      @if (user) {
-        <app-side-menu [title]="`Willkommen ${user.displayName}`" [navRoutes]="authRoutes"></app-side-menu>
+      @if (user$ | async; as user ) {
+      <app-side-menu
+        [title]="`Willkommen ${user.displayName}`"
+        [navRoutes]="authRoutes"
+      ></app-side-menu>
+
+      <button class="py-2 px-4 rounded-lg bg-white text-slate-700"
+        (click)="logout()"
+      >
+        cerrar sesion
+      </button>
       }@else {
-        <app-side-menu [navRoutes]="notAuthRoutes"></app-side-menu>
+      <app-side-menu [navRoutes]="notAuthRoutes"></app-side-menu>
       }
-      
-      
-      <app-side-menu [navRoutes]="routes" title="menu principal"></app-side-menu>
-    
-      <app-side-menu 
-      *appAdmin
-      [navRoutes]="adminRoutes" title="Administracion"></app-side-menu>
-      
+
+      <app-side-menu
+        [navRoutes]="routes"
+        title="menu principal"
+      ></app-side-menu>
+
+      <app-side-menu
+        *appAdmin
+        [navRoutes]="adminRoutes"
+        title="Administracion"
+      ></app-side-menu>
     </div>
   </aside>
 </div>
