--- a/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
+++ b/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
@@ -60,12 +60,12 @@
         [title]="`Willkommen ${user.displayName}`"
         [navRoutes]="authRoutes"
       ></app-side-menu>
-
-      <button class="py-2 px-4 rounded-lg bg-white text-slate-700"
-        (click)="logout()"
-      >
-        cerrar sesion
-      </button>
+      
+        <button class="py-2 px-4 rounded-lg bg-white text-slate-700 w-3/5 mx-auto mt-5 hover:bg-slate-700 hover:text-white"
+          (click)="logout()"
+        >
+          cerrar sesion
+        </button>
       }@else {
       <app-side-menu [navRoutes]="notAuthRoutes"></app-side-menu>
       }
