--- a/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
+++ b/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
@@ -57,7 +57,7 @@
     <div class="flex-1 p-4 overflow-y-auto">
       @if (user$ | async; as user ) {
       <app-side-menu
-        [title]="`Willkommen ${user.displayName}`"
+        [title]="`Bienvenido ${user.displayName}`"
         [navRoutes]="authRoutes"
       ></app-side-menu>
       
