--- a/02.Project/ecommerce-app/src/app/components/products/search-products/search-products.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/search-products/search-products.component.html
@@ -2,7 +2,7 @@
   <div class="shadow-lg border-b sticky top-0 z-50 p-4 bg-gray-900 backdrop-blur-md ">
     <div class="max-w-6xl mx-auto">
       <form [formGroup]="searchProductForm" class="flex gap-2 items-center">
-        <div class="flex gap-2 items-center h-10 w-auto relative -left-26">
+        <div class="flex gap-2 items-center h-10 w-auto relative -left-26 cursor-pointer" [routerLink]="['/products']">
           <img src="images-2/upc.png" alt="TechNova" class="h-10 w-auto">
           <p class="text-3xl text-white">Tech<span class="text-3xl font-semibold text-blue-500">Nova</span></p>
         </div>
