--- a/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
+++ b/02.Project/ecommerce-app/src/app/layout/aside/aside.component.html
@@ -1,6 +1,6 @@
 <div class="relative z-[100]">
   <button
-    class="fixed top-4 right-4 p-3 bg-blue-600 z-50 text-white rounded-full shadow-lg transition-all duration-300 hover:bg-blue-700 hover:scale-110 hover:shadow-xl"
+    class="fixed top-4 right-4 p-3 bg-blue-600 z-50 text-white rounded-full shadow-lg transition-all duration-300 hover:bg-blue-700 hover:scale-110 hover:shadow-xl cursor-pointer"
     (click)="sideBarOpen = !sideBarOpen"
   >
     <svg
