--- a/02.Project/ecommerce-app/src/app/components/auth/login-form/login-form.component.html
+++ b/02.Project/ecommerce-app/src/app/components/auth/login-form/login-form.component.html
@@ -1,6 +1,6 @@
 
-<div class="min-h-screen bg-gray-50 flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-  <img src="images-2/hexagon-back-bue.jpg" alt="" class="z-0 blur-sm fixed inset-0 w-full h-full object-cover">
+<div class="min-h-screen bg-gray-50 flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8 bg-gradient-to-tr from-red-500 to-blue-500">
+
   <div class="relative z-10 max-w-md w-full space-y-8">
     <form
       (ngSubmit)="handleSubmit()"
